[gd_scene load_steps=7 format=2]

[ext_resource path="res://stages/scene_background.tscn" type="PackedScene" id=1]
[ext_resource path="res://res/tiles.tres" type="TileSet" id=2]
[ext_resource path="res://fx/fire.tscn" type="PackedScene" id=3]
[ext_resource path="res://player/player.tscn" type="PackedScene" id=4]
[ext_resource path="res://stages/stage.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 62.4164, 16.4492 )

[node name="Stage" type="Node2D"]
script = ExtResource( 5 )

[node name="SceneBackground" parent="." instance=ExtResource( 1 )]

[node name="BackgroundTileMap" type="TileMap" parent="."]
modulate = Color( 1, 1, 1, 0.498039 )
scale = Vector2( 4, 4 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
collision_layer = 0
collision_mask = 0
format = 1
tile_data = PoolIntArray( 7, 14, 0, 65544, 13, 0, 131074, 13, 0, 131084, 14, 0, 131085, 13, 0, 262145, 14, 0, 327686, 12, 0, 458760, 14, 0, 524301, 13, 0, 524302, 13, 0, 589826, 14, 0, 655373, 12, 0 )

[node name="LevelTileMap" type="TileMap" parent="." groups=["foreground"]]
scale = Vector2( 4, 4 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
collision_layer = 8
collision_mask = 5
format = 1
tile_data = PoolIntArray( 0, 2, 0, 1, 2, 0, 2, 2, 0, 3, 2, 0, 4, 2, 0, 5, 2, 0, 6, 2, 0, 9, 2, 0, 10, 2, 0, 11, 2, 0, 12, 2, 0, 13, 2, 0, 14, 2, 0, 15, 2, 0, 65536, 2, 0, 65551, 2, 0, 131072, 2, 0, 131087, 2, 0, 196608, 2, 0, 196613, 2, 0, 196614, 2, 0, 196615, 2, 0, 196616, 2, 0, 196617, 2, 0, 196618, 2, 0, 196623, 2, 0, 262144, 2, 0, 262159, 2, 0, 327680, 2, 0, 327695, 2, 0, 393216, 2, 0, 393217, 2, 0, 393218, 2, 0, 393219, 2, 0, 393220, 2, 0, 393227, 2, 0, 393228, 2, 0, 393229, 2, 0, 393230, 2, 0, 393231, 2, 0, 458752, 2, 0, 458767, 2, 0, 524288, 2, 0, 524303, 2, 0, 589824, 2, 0, 589828, 2, 0, 589829, 2, 0, 589830, 2, 0, 589831, 2, 0, 589832, 2, 0, 589833, 2, 0, 589834, 2, 0, 589835, 2, 0, 589839, 2, 0, 655360, 6, 0, 655375, 6, 0, 720896, 6, 0, 720911, 6, 0, 786432, 2, 0, 786433, 2, 0, 786434, 2, 0, 786435, 2, 0, 786436, 2, 0, 786437, 2, 0, 786438, 2, 0, 786441, 2, 0, 786442, 2, 0, 786443, 2, 0, 786444, 2, 0, 786445, 2, 0, 786446, 2, 0, 786447, 2, 0 )

[node name="PickupsMap" type="TileMap" parent="."]
scale = Vector2( 4, 4 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
collision_layer = 0
collision_mask = 0
format = 1
tile_data = PoolIntArray( 131077, 23, 0, 131078, 23, 0, 131079, 23, 0, 131080, 23, 0, 131081, 23, 0, 131082, 23, 0, 327681, 23, 0, 327682, 23, 0, 327683, 23, 0, 327684, 23, 0, 327691, 23, 0, 327692, 23, 0, 327693, 23, 0, 327694, 23, 0, 524292, 23, 0, 524293, 23, 0, 524294, 23, 0, 524295, 23, 0, 524296, 23, 0, 524297, 23, 0, 524298, 23, 0, 524299, 23, 0, 720899, 23, 0, 720900, 23, 0, 720907, 23, 0, 720908, 23, 0 )

[node name="FX" type="Node2D" parent="."]

[node name="Fire_1" parent="FX" instance=ExtResource( 3 )]
position = Vector2( 463, 810 )

[node name="Fire_2" parent="FX" instance=ExtResource( 3 )]
position = Vector2( 483, 810 )
start_frame = 3

[node name="Fire_3" parent="FX" instance=ExtResource( 3 )]
position = Vector2( 503, 810 )
start_frame = 2

[node name="Fire_4" parent="FX" instance=ExtResource( 3 )]
position = Vector2( 523, 810 )
start_frame = 3

[node name="Fire_5" parent="FX" instance=ExtResource( 3 )]
position = Vector2( 543, 810 )
start_frame = 1

[node name="Fire_6" parent="FX" instance=ExtResource( 3 )]
position = Vector2( 563, 810 )
start_frame = 4

[node name="Crates" type="Node2D" parent="."]

[node name="Characters" type="Node2D" parent="."]

[node name="Player" parent="Characters" instance=ExtResource( 4 )]
position = Vector2( 130, 730 )

[node name="Placeholders" type="Node2D" parent="."]

[node name="Position2D" type="Position2D" parent="Placeholders"]
position = Vector2( 520, -40 )

[node name="Sensors" type="Node2D" parent="."]

[node name="Fire1" type="Area2D" parent="Sensors"]
position = Vector2( 513, 785 )
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sensors/Fire1"]
shape = SubResource( 1 )

[node name="SpawnYieldTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="body_entered" from="Sensors/Fire1" to="." method="_on_Fire_body_entered"]
